syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeymanagerGRPC";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

import "google/protobuf/timestamp.proto";

service KeymanagerGRPCService {
  rpc cria (CreateKeyRequest) returns (CreateKeyResponse) {}
  rpc delete (DeleteKeyRequest) returns (DeleteKeyResponse) {}
  rpc get (GetKeyRequest) returns (GetKeyResponse) {}
  rpc list (ListKeyRequest) returns (ListKeyResponse) {}
}

enum TipoChave {
  CPF = 0;
  CNPJ = 1;
  PHONE = 2;
  EMAIL = 3;
  RANDOM = 4;
}

enum TipoConta {
  CONTA_CORRENTE = 0;
  CONTA_POUPANCA = 1;
}

message CreateKeyRequest {
  string idCliente = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message CreateKeyResponse {
  int64 idPix = 1;
}

message DeleteKeyRequest {
  int64 idPix = 1;
  string idCliente = 2;
}

message DeleteKeyResponse {}

message GetKeyRequest {
  string idCliente = 1;
  int64 idPix = 2;
}

message GetKeyResponse {
  message Titular {
    string nome = 1;
    string cpf = 2;
  }

  message Instituicao {
    string nome = 1;
    string agencia = 2;
    string conta = 3;
    TipoConta tipoConta = 4;
  }

  int64 idPix = 1;
  string idCliente = 2;
  TipoChave tipoChave = 3;
  string chave = 4;
  Titular titular = 5;
  Instituicao instituicao = 6;
  string criadaEm = 7;
}

message ListKeyRequest {
  string idCliente = 1;
}

message ListKeyResponse {
  repeated GetKeyResponse chaves = 1;
}